<resources>
    <string name="app_name">Time Table</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tuesday">Tuesday</string>
    <string name="title_activity_monday">Monday</string>
    <string name="title_activity_wednesday">Wednesday</string>
    <string name="title_activity_thursday">Thursday</string>
    <string name="title_activity_friday">Friday</string>
    <string name="name_of_course">Name of Course</string>
    <string name="location_course_code">Location Course Code</string>
    <string name="timing">Timing</string>
    <string name="slot_type">Slot Type</string>
    <string name="faculty">Faculty</string>
</resources>
